vlib/v/checker/tests/or_block_cast_wrong_default_type_err.vv
fn read_f64() !f64 {
	return error('oops')
}

fn main() {
	_ := int(read_f64() or { 'bad' })
}
